Add tooltip title for headers

--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -288,7 +288,7 @@
                                 <thead>
                                     <tr>
                                         <th:block th:each="field: ${noticesByCode.value[0].fields}">
-                                            <th th:text="${field}" />
+                                            <th th:text="${field}" th:title="${noticesByCode.value[0].getCommentForField(field)}" />
                                         </th:block>
                                     </tr>
                                 </thead>
