--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -282,6 +282,7 @@
                             <p> Please find this notice description <a
                                     th:href="@{'https://gtfs-validator.mobilitydata.org/rules.html#' + ${noticesByCode.key}}">here</a>.
                             </p>
+                             <p th:if="${noticesByCode.value.size > 50}">Only the first 50 of <span th:text="${noticesByCode.value.size}"></span> affected records are displayed below.</p>
                             <table>
                                 <thead>
                                     <tr>
@@ -290,15 +291,13 @@
                                         </th:block>
                                     </tr>
                                 </thead>
-                                <span th:each="notice: ${noticesByCode.value}">
-                                    <tbody>
-                                        <tr>
-                                            <th:block th:each="field: ${notice.fields}">
-                                                <td th:text="${notice.getValueForField(field)}" />
-                                            </th:block>
-                                        </tr>
-                                    </tbody>
-                                </span>
+                                <tbody>
+                                    <tr th:each="notice, iStat : ${noticesByCode.value}" th:if="${iStat.count <= 50}">
+                                    <th:block th:each="field: ${notice.fields}">
+                                            <td th:text="${notice.getValueForField(field)}" />
+                                    </th:block>
+                                    </tr>
+                                </tbody>
                             </table>
                         </div>
                     </td>
