--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -255,7 +255,7 @@
                         <div class="desc-content">
                             <h3 th:text="${noticesByCode.key}" />
                             <p th:utext="${noticesByCode.value[0].description}" />
-                            <p> Please find this notice description <a
+                            <p> You can see more about this notice <a
                                     th:href="@{'https://gtfs-validator.mobilitydata.org/rules.html#' + ${noticesByCode.key}}">here</a>.
                             </p>
                              <p th:if="${noticesByCode.value.size > 50}">Only the first 50 of <span th:text="${noticesByCode.value.size}"></span> affected records are displayed below.</p>
