--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -5,173 +5,148 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8; width=device-width, initial-scale=1"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
-        body {
-            font-family: Helvetica, Arial, sans-serif;
-            font-size: 14px;
-            min-width: 800px;
-        }
+    body {
+        font-family: Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        min-width: 800px;
+        padding: 1em 2em;
+    }
 
-        .error:before {
-            content: "\1F534  ";
-        }
+    .error:before {
+        content: "\1F534  ";
+    }
 
-        .warning:before {
-            content: "\1F7E0  ";
-        }
+    .warning:before {
+        content: "\1F7E0  ";
+    }
 
-        .info:before {
-            content: "\26AA  ";
-        }
+    .info:before {
+        content: "\26AA  ";
+    }
 
-        * {
-            box-sizing: border-box;
-        }
+    * {
+        box-sizing: border-box;
+    }
 
-        body {
-            padding: 1em 2em;
-        }
+    .version-update {
+        font-weight: bold;
+        color: red;
+    }
 
-        .version-update {
-            font-weight: bold;
-            color: red;
-        }
+    table {
+        width: 100%;
+    }
 
-        table {
-            width: 100%;
-        }
+    table th {
+        text-align: left;
+        border-bottom: 2px solid #000;
+        padding: 0.5em;
+        white-space: nowrap;
+    }
 
-        table th {
-            text-align: left;
-            border-bottom: 2px solid #000;
-            padding: 0.5em;
-        }
+    table td {
+        border-bottom: 1px solid #ddd;
+        padding: 0.5em;
+    }
 
-        table td {
-            border-bottom: 1px solid #ddd;
-            padding: 0.5em;
-        }
+    .desc-content {
+        padding: 0.5em;
+        border-bottom: 5px solid #000;
+        border-top: 5px solid #000;
+    }
 
-        table.accordion > tbody > tr.notice td,
-        table.accordion > tbody > tr.view th {
-            cursor: auto;
-        }
+    .desc-content h3 {
+        margin-top: 0;
+    }
 
-        table.accordion > tbody > tr.notice td:first-child,
-        table.accordion > tbody > tr.notice th:first-child {
-            position: relative;
-            padding-left: 20px;
-        }
+    .summary {
+        display: flex;
+        flex-wrap: wrap;
+    }
 
-        table.accordion > tbody > tr.notice td:first-child:before,
-        table.accordion > tbody > tr.notice th:first-child:before {
-            position: absolute;
-            top: 50%;
-            left: 5px;
-            width: 9px;
-            height: 16px;
-            margin-top: -8px;
-            color: #000;
-            content: "+";
-        }
+    .summary-row {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+    }
 
-        table.accordion > tbody > tr.notice.open td:first-child:before,
-        table.accordion > tbody > tr.notice.open th:first-child:before {
-            content: "\2013";
-        }
+    .summary-cell {
+        padding: 5px;
+        box-sizing: border-box;
+    }
 
-        table.accordion > tbody > tr.notice:hover {
-            background: #ddd;
-        }
+    .summary h4 {
+        white-space: nowrap;
+    }
 
-        table.accordion > tbody > tr.notice.open {
-            background: #ddd;
-            color: black;
-        }
+    .summary dt,
+    .summary dd {
+        display: inline-block;
+    }
 
-        table.accordion > tbody > tr.description {
-            display: none;
-        }
+    .summary dd {
+        font-weight: bold;
+        width: 130px;
+        margin-inline-start: 0;
+    }
 
-        table.accordion > tbody > tr.description.open {
-            display: table-row;
-        }
+    .summary ul,
+    .summary ol {
+        padding-left: 20px;
+    }
 
-        .desc-content {
-            padding: 0.5em;
-            border-bottom: 5px solid #000;
-            border-top: 5px solid #000
-        }
+    .summary li {
+        padding-left: 0px;
+    }
 
-        .desc-content h3 {
-            margin-top: 0;
-        }
+    hr {
+        border: none;
+        border-top: 2px solid #000;
+        margin-top: 5px;
+        margin-bottom: 15px;
+    }
 
-        .summary {
-            display: flex;
-            flex-wrap: wrap;
-        }
+    .spec-feature {
+        background-color: #d4d4d4;
+        padding: 2px 5px;
+    }
 
-        .summary-row {
-            display: flex;
-            flex-wrap: wrap;
-            width: 100%;
-        }
+    .tooltip {
+        text-decoration: none;
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+    }
 
-        .summary-cell {
-            padding: 5px;
-            box-sizing: border-box;
-        }
+    .tooltip .tooltiptext {
+        visibility: hidden;
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 5px;
+        position: absolute;
+        z-index: 1;
+        bottom: 100%;
+        left: 50%;
+        margin-left: -60px;
+        opacity: 0;
+        transition: opacity 0.3s;
+    }
 
-        .summary .summary_info {
-            flex: 1 1 calc(25% - 10px);
-            margin: 0 5px 20px 0;
-        }
+    .tooltip:hover .tooltiptext {
+        visibility: visible;
+        opacity: 1;
+    }
 
+    /* Responsive behavior */
+    @media (max-width: 767px) {
+        .summary .summary_info,
         .summary .summary_list {
-            flex: 1 1 calc(12% - 10px);
-            margin: 0 5px 20px 0;
+            flex-basis: 100%;
         }
-       .summary h4 {
-            white-space: nowrap;
-        }
-
-.summary dt {
-    display: inline-block;
-}
-
-.summary dd {
-    display: inline-block;
-    font-weight: bold;
-    width: 130px;
-    margin-inline-start: 0;
-}
-
-.summary ul, .summary ol {
-    padding-left: 20px;
-}
-
-.summary li {
-    padding-left: 0px;
-}
-        /* Responsive behavior */
-        @media (max-width: 767px) {
-            .summary .summary_info, .summary .summary_list {
-                flex-basis: 100%;
-            }
-        }
-
-        hr {
-            border: none;
-            border-top: 2px solid #000;
-            margin-top: 5px;
-            margin-bottom: 15px;
-        }
-
-        .spec-feature {
-            background-color: #d4d4d4;
-            padding: 2px 5px;
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
     <h1>GTFS Schedule Validation Report</h1>
@@ -279,7 +254,8 @@
                     <td colspan="4">
                         <div class="desc-content">
                             <h3 th:text="${noticesByCode.key}" />
-                            <p> Please find this notice description <a
+                            <p th:utext="${noticesByCode.value[0].description}" />
+                            <p> You can see more about this notice <a
                                     th:href="@{'https://gtfs-validator.mobilitydata.org/rules.html#' + ${noticesByCode.key}}">here</a>.
                             </p>
                              <p th:if="${noticesByCode.value.size > 50}">Only the first 50 of <span th:text="${noticesByCode.value.size}"></span> affected records are displayed below.</p>
@@ -287,7 +263,12 @@
                                 <thead>
                                     <tr>
                                         <th:block th:each="field: ${noticesByCode.value[0].fields}">
-                                            <th th:text="${field}" />
+                                            <th>
+                                               <span th:text="${field}"></span>
+                                                <a href="#" class="tooltip" onclick="event.preventDefault();"><span>(?)</span>
+                                                    <span class="tooltiptext" th:text="${noticesByCode.value[0].getCommentForField(field)}"></span>
+                                                </a>
+                                            </th>
                                         </th:block>
                                     </tr>
                                 </thead>
