Fix bug in HTML report generation where feed metadata can be null in the case of a system error when processing a feed, resulting in a NPE.

--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -168,7 +168,7 @@
 
     <h2>Summary</h2>
 
-    <div class="summary">
+    <div class="summary" th:if="${metadata}">
         <div class="summary-row">
             <div class="summary-cell summary_info">
                 <h4>Agencies included</h4>
