feat: formatting components

--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -109,6 +109,7 @@
     .spec-feature {
         background-color: #d4d4d4;
         padding: 2px 5px;
+        margin-right: 2px;
     }
 
     .tooltip {
