--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -111,6 +111,7 @@
         background-color: #d4d4d4;
         padding: 2px 5px;
         margin-right: 2px;
+        margin-bottom: 2px;
     }
 
     .tooltip {
@@ -202,6 +203,13 @@
     table.accordion > tbody > tr.description.open {
         display: table-row;
     }
+
+    #gtfs-components-container > div {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        flex-wrap: wrap;
+    }
 </style>
 
 </head>
@@ -271,7 +279,7 @@
                     <li th:each="count: ${metadata.counts}"><span th:text="${count.key} + ': ' + ${count.value}" /></li>
                 </ul>
             </div>
-            <div class="summary-cell summary_list">
+            <div class="summary-cell summary_list" id="gtfs-components-container">
                 <h4>
                     GTFS Components included
                     <a href="#" class="tooltip" onclick="event.preventDefault();"><span>(?)</span>
