--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -4,6 +4,12 @@
     <title>GTFS Schedule Validation Report</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8; width=device-width, initial-scale=1"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+      $(document).ready(function () {
+        $(document).tooltip();
+      });
+    </script>
     <style>
     body {
         font-family: Helvetica, Arial, sans-serif;
@@ -122,7 +128,6 @@
     }
 
     .tooltip .tooltiptext {
-        visibility: hidden;
         background-color: #555;
         color: #fff;
         text-align: center;
