update caption styles

--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -43,6 +43,11 @@
         width: 100%;
     }
 
+    table caption {
+        text-align: left;
+        margin: 0.5em 0;
+    }
+
     table th {
         text-align: left;
         border-bottom: 2px solid #000;
