--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -299,7 +299,9 @@
                 </h4>
                 <hr />
                 <div>
-                    <span class="spec-feature" th:each="feature: ${metadata.specFeatures}" th:if="${feature.value}" th:text="${feature.key}" />
+                    <span class="spec-feature" th:each="feature: ${metadata.specFeatures}" th:if="${feature.value}">
+                        <a th:href="${feature.key.getDocUrl()}" th:text="${feature.key.getFeatureName()}" target="_blank"></a>
+                    </span>
                 </div>
             </div>
         </div>
