fix: PR comments + merge master

--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -123,6 +123,7 @@
         padding: 2px 5px;
         margin-right: 2px;
         margin-bottom: 2px;
+        text-align: center;
     }
 
     .tooltip {
