--- a/main/src/main/resources/report.html
+++ b/main/src/main/resources/report.html
@@ -247,10 +247,12 @@
 
     <p>Use this report alongside our <a href="https://gtfs-validator.mobilitydata.org/rules.html">documentation</a>.</p>
 
-    <p class="warning-display" th:if="${metadata.hasFlexFeatures}">
-        &#9888; This feed contains GTFS Flex features. Please note that GTFS Flex validation support is still in development.
-        You can manually review all the validation rules for Flex data <a href="https://docs.google.com/document/d/1QABoIeOdR6lAB7A6_X6WIbZwC7EnAIZvm_hRNwNQeoI/edit#heading=h.mky28yjwt08z">here</a>.
-    </p>
+    <div th:if="${metadata}">
+        <p class="warning-display" th:if="${metadata.hasFlexFeatures}">
+            &#9888; This feed contains GTFS Flex features. Please note that GTFS Flex validation support is still in development.
+            You can manually review all the validation rules for Flex data <a href="https://docs.google.com/document/d/1QABoIeOdR6lAB7A6_X6WIbZwC7EnAIZvm_hRNwNQeoI/edit#heading=h.mky28yjwt08z">here</a>.
+        </p>
+    </div>
 
     <p class="version-update" th:if="${summary.newVersionOfValidatorAvailable}">A new version of the <a
             href="https://github.com/MobilityData/gtfs-validator/releases">Canonical GTFS Schedule validator</a> is available!
